--- a/presensi_karyawan/pubspec.yaml
+++ b/presensi_karyawan/pubspec.yaml
@@ -30,16 +30,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  camera: ^0.10.4 # Gunakan versi terbaru 2222
-  path_provider: ^2.0.11 # Untuk menyimpan gambar 2222
-  path: ^1.8.2 # Untuk membuat path platform-independent 2222
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  camera: ^0.10.4 # Gunakan versi terbaru
+  path_provider: ^2.0.11 # Untuk menyimpan gambar
   cupertino_icons: ^1.0.8
   google_mlkit_face_detection: ^0.12.0
   http: ^1.2.2
+  tflite_flutter: ^0.11.0
+  image: ^4.3.0
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
@@ -64,9 +62,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+assets:
+  - assets/facenet_model.tflite
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
