--- a/presensi_karyawan/pubspec.yaml
+++ b/presensi_karyawan/pubspec.yaml
@@ -62,8 +62,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-assets:
-  - assets/facenet_model.tflite
+  assets:
+    - assets/facenet_model.tflite
+    - assets/mobilenet.tflite
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
