--- a/presensi_karyawan/pubspec.yaml
+++ b/presensi_karyawan/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   tflite_flutter: ^0.11.0
   image: ^4.3.0
   image_picker: ^1.1.2
+  flutter_secure_storage: ^9.2.2
 
 dev_dependencies:
   flutter_test:
